[b]Version 0.6.6[/b]:

(2008-12-23)
 * Now smplayer tries to update the subtitle tracks if they change during
   playback. This makes subtitles work if using dvdnav, and seems to fix
   a problem when selecting the initial track 
   (see http://sourceforge.net/tracker/index.php?func=detail&aid=2422574&group_id=185512&atid=913573)
   This is the kind of changes that can break something or produce an 
   unexpected behaviour...

(2008-12-20)
 * Applied with a few changes the patch customStyleAction.patch by
   matt <matt@endboss.org>. It adds a few more functions for the widgetactions,
   like to set a custom style.
 * Added a new gui (mpcgui, a media player classic clone) developed by 
   Matthias Petri <matt@endboss.org>

(2008-12-19)
 * Applied (with a few changes) a patch by matt <matt@endboss.org>.
   This patch adds 3 modes for the stay on top option: always, never and 
   while playing.

(2008-12-12)
 * Added a new option Video->Preview. This option creates a preview 
   (thumbnails) of the selected video. There are options to choose the
   number of columns, rows, maximum width of the generated image...
   Finally the preview can be saved (as jpg or png).
   Note: the video preview is not finished yet.

(2008-12-07)
 * (Experimental) Increased the resolution of the seekbar. Previously
   a step of the seekbar (in a 90 minute movie) was equal to 54 seconds.
   Now it's equal to 5.4 seconds. As there's usually an I-frame about 10
   seconds (and mplayer always jumps to an I-frame) I think that's enough.

(2008-12-06)
 * Bug #2399200: the downloaded subtitle filename was wrong if the video 
   filename contained a dot in the name (example: video.hdtv.avi created a 
   video_es.srt file instead of video.hdtv_es.avi). This is now fixed.

(2008-12-03)
 * Now the logs in the mplayer/smplayer log windows update in realtime.
 * The "MPlayer language" tab in the Advanced section in preferences has
   been removed. It's not necessary anymore, although if you've got a 